fix settings going off screen

--- a/src/settings-style.css
+++ b/src/settings-style.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 95vw;
 }
 
 #legacy-graphics-container {
@@ -10,6 +11,7 @@
   align-items: center;
   justify-content: center;
   width: 400px;
+  max-width: 100vw;
   height: 100px;
 }
 
